Fixed event time top spacing being too tight if not hosted

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -329,6 +329,8 @@
     background: rgba(150, 150, 150, 0.33);
   }
 
+  #event-header { margin-bottom: 5px; }
+
   #overlay-color-bar {
     width: 100%;
     padding: 10px 0;
@@ -338,7 +340,6 @@
 
   #host-info {
     padding: 5px 15px;
-    margin-bottom: 5px;
     background: #d4d4d4;
     text-align: left;
     font-size: 14px;
